# auto-travel-router

./: .dockerignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  Makefile  README.md  compose.yml
frontend/: index.html  nginx.conf
include/atr/: ch_graph.hpp  ch_preprocessor.hpp  ch_router.hpp  dijkstra_router.hpp  graph.hpp  optimizer.hpp  osm_reader.hpp  server.hpp  static_graph.hpp
src/: CMakeLists.txt  ch_graph.cpp  ch_preprocessor.cpp  ch_router.cpp  dijkstra_router.cpp  graph_impl.cpp  main.cpp  optimizer.cpp  osm_reader.cpp  server.cpp
tests/: CMakeLists.txt  test_ch.cpp  test_dijkstra.cpp
